--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
-    <script src=https://maps.googleapis.com/maps/api/js?key=API_KEY&libraries=places></script>
+    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCx4hPBXSWzvLOwIYGDb601uO1_N8bDHiE&libraries=places'></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
